# redhat-api-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  redhat_mcp_server.py
redhat_api_mcp/: cli.py  client.py  server.py  tools.py
skills/rhapi-cli/: SKILL.md
