[project]
name = "redhat-api-mcp"
version = "0.3.0"
description = "Red Hat API MCP Server and CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "beautifulsoup4",
    "bs4>=0.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rhapi = "redhat_api_mcp.cli:cli"
